efk/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: kube-logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # or true permet la redirection ou non vers le https
spec:
  tls:
  - secretName: projet-1
  rules:
  - host: kibana.example.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
